%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: TN_player_animController
  serializedVersion: 2
  m_AnimatorParameters:
  - m_Name: bGrounded
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: bGoingLeft
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: bMoved
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: bCanJump
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: bCrouch
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: bLookUp
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: bRangedAttack
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: bSwordAttack
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: bRopeAttack
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: bNaginataAttack
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: bAttacking
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: Base Layer
    m_StateMachine: {fileID: 110700000}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!1101 &110100000
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110278469}
  m_TransitionDuration: .260869563
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: bGrounded
    m_EventTreshold: 0
    m_ExitTime: .739130437
  - m_ConditionMode: 1
    m_ConditionEvent: bGoingLeft
    m_EventTreshold: 0
    m_ExitTime: .739130437
  - m_ConditionMode: 2
    m_ConditionEvent: bMoved
    m_EventTreshold: 0
    m_ExitTime: .739130437
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110103773
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110289922}
  m_DstState: {fileID: 110253879}
  m_TransitionDuration: .272727191
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: bGrounded
    m_EventTreshold: 0
    m_ExitTime: .727272809
  - m_ConditionMode: 1
    m_ConditionEvent: bCrouch
    m_EventTreshold: 0
    m_ExitTime: .727272809
  - m_ConditionMode: 2
    m_ConditionEvent: bMoved
    m_EventTreshold: 0
    m_ExitTime: .727272809
  - m_ConditionMode: 2
    m_ConditionEvent: bGoingLeft
    m_EventTreshold: 0
    m_ExitTime: .727272809
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110105515
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110263938}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .25
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: bGrounded
    m_EventTreshold: 0
    m_ExitTime: .75
  - m_ConditionMode: 2
    m_ConditionEvent: bCrouch
    m_EventTreshold: 0
    m_ExitTime: .75
  - m_ConditionMode: 2
    m_ConditionEvent: bMoved
    m_EventTreshold: 0
    m_ExitTime: .75
  - m_ConditionMode: 2
    m_ConditionEvent: bGoingLeft
    m_EventTreshold: 0
    m_ExitTime: .75
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110106731
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110289922}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .272727191
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: bGrounded
    m_EventTreshold: 0
    m_ExitTime: .727272809
  - m_ConditionMode: 2
    m_ConditionEvent: bMoved
    m_EventTreshold: 0
    m_ExitTime: .727272809
  - m_ConditionMode: 2
    m_ConditionEvent: bCrouch
    m_EventTreshold: 0
    m_ExitTime: .727272809
  - m_ConditionMode: 2
    m_ConditionEvent: bGoingLeft
    m_EventTreshold: 0
    m_ExitTime: .727272809
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110117870
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110251078}
  m_TransitionDuration: .260869563
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: bGrounded
    m_EventTreshold: 0
    m_ExitTime: .739130437
  - m_ConditionMode: 1
    m_ConditionEvent: bMoved
    m_EventTreshold: 0
    m_ExitTime: .739130437
  - m_ConditionMode: 1
    m_ConditionEvent: bGoingLeft
    m_EventTreshold: 0
    m_ExitTime: .739130437
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110119417
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110289922}
  m_TransitionDuration: .260869563
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: bGrounded
    m_EventTreshold: 0
    m_ExitTime: .739130437
  - m_ConditionMode: 1
    m_ConditionEvent: bMoved
    m_EventTreshold: 0
    m_ExitTime: .739130437
  - m_ConditionMode: 2
    m_ConditionEvent: bGoingLeft
    m_EventTreshold: 0
    m_ExitTime: .739130437
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110139471
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110289922}
  m_DstState: {fileID: 110251078}
  m_TransitionDuration: .272727191
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: bGrounded
    m_EventTreshold: 0
    m_ExitTime: .727272809
  - m_ConditionMode: 1
    m_ConditionEvent: bMoved
    m_EventTreshold: 0
    m_ExitTime: .727272809
  - m_ConditionMode: 1
    m_ConditionEvent: bGoingLeft
    m_EventTreshold: 0
    m_ExitTime: .727272809
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110147357
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110253879}
  m_TransitionDuration: .260869563
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: bGrounded
    m_EventTreshold: 0
    m_ExitTime: .739130437
  - m_ConditionMode: 1
    m_ConditionEvent: bCrouch
    m_EventTreshold: 0
    m_ExitTime: .739130437
  - m_ConditionMode: 2
    m_ConditionEvent: bGoingLeft
    m_EventTreshold: 0
    m_ExitTime: .739130437
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110150328
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110251078}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .265629113
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: bGrounded
    m_EventTreshold: 0
    m_ExitTime: .727272809
  - m_ConditionMode: 2
    m_ConditionEvent: bMoved
    m_EventTreshold: 0
    m_ExitTime: .727272809
  - m_ConditionMode: 2
    m_ConditionEvent: bGoingLeft
    m_EventTreshold: 0
    m_ExitTime: .727272809
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110150695
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110253879}
  m_DstState: {fileID: 110278469}
  m_TransitionDuration: .315789431
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: bGrounded
    m_EventTreshold: 0
    m_ExitTime: .684210539
  - m_ConditionMode: 2
    m_ConditionEvent: bCrouch
    m_EventTreshold: 0
    m_ExitTime: .684210539
  - m_ConditionMode: 2
    m_ConditionEvent: bMoved
    m_EventTreshold: 0
    m_ExitTime: .684210539
  - m_ConditionMode: 1
    m_ConditionEvent: bGoingLeft
    m_EventTreshold: 0
    m_ExitTime: .684210539
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110155087
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110251078}
  m_DstState: {fileID: 110289922}
  m_TransitionDuration: .272727191
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: bGrounded
    m_EventTreshold: 0
    m_ExitTime: .727272809
  - m_ConditionMode: 1
    m_ConditionEvent: bMoved
    m_EventTreshold: 0
    m_ExitTime: .727272809
  - m_ConditionMode: 2
    m_ConditionEvent: bGoingLeft
    m_EventTreshold: 0
    m_ExitTime: .727272809
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110161732
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110253879}
  m_DstState: {fileID: 110289922}
  m_TransitionDuration: .315789431
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: bGrounded
    m_EventTreshold: 0
    m_ExitTime: .684210539
  - m_ConditionMode: 2
    m_ConditionEvent: bCrouch
    m_EventTreshold: 0
    m_ExitTime: .684210539
  - m_ConditionMode: 1
    m_ConditionEvent: bMoved
    m_EventTreshold: 0
    m_ExitTime: .684210539
  - m_ConditionMode: 2
    m_ConditionEvent: bGoingLeft
    m_EventTreshold: 0
    m_ExitTime: .684210539
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110169712
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110253879}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .315789431
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: bGrounded
    m_EventTreshold: 0
    m_ExitTime: .684210539
  - m_ConditionMode: 2
    m_ConditionEvent: bCrouch
    m_EventTreshold: 0
    m_ExitTime: .684210539
  - m_ConditionMode: 2
    m_ConditionEvent: bMoved
    m_EventTreshold: 0
    m_ExitTime: .684210539
  - m_ConditionMode: 2
    m_ConditionEvent: bGoingLeft
    m_EventTreshold: 0
    m_ExitTime: .684210539
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110171063
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110278469}
  m_DstState: {fileID: 110289922}
  m_TransitionDuration: .260869563
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: bGrounded
    m_EventTreshold: 0
    m_ExitTime: .739130437
  - m_ConditionMode: 1
    m_ConditionEvent: bMoved
    m_EventTreshold: 0
    m_ExitTime: .739130437
  - m_ConditionMode: 2
    m_ConditionEvent: bGoingLeft
    m_EventTreshold: 0
    m_ExitTime: .739130437
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110175465
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110263938}
  m_DstState: {fileID: 110278469}
  m_TransitionDuration: .25
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: bGrounded
    m_EventTreshold: 0
    m_ExitTime: .75
  - m_ConditionMode: 2
    m_ConditionEvent: bCrouch
    m_EventTreshold: 0
    m_ExitTime: .75
  - m_ConditionMode: 2
    m_ConditionEvent: bMoved
    m_EventTreshold: 0
    m_ExitTime: .75
  - m_ConditionMode: 1
    m_ConditionEvent: bGoingLeft
    m_EventTreshold: 0
    m_ExitTime: .75
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110180384
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110278469}
  m_DstState: {fileID: 110251078}
  m_TransitionDuration: .260869563
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: bGrounded
    m_EventTreshold: 0
    m_ExitTime: .739130437
  - m_ConditionMode: 1
    m_ConditionEvent: bGoingLeft
    m_EventTreshold: 0
    m_ExitTime: .739130437
  - m_ConditionMode: 1
    m_ConditionEvent: bMoved
    m_EventTreshold: 0
    m_ExitTime: .739130437
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110184051
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110253879}
  m_DstState: {fileID: 110263938}
  m_TransitionDuration: .315789431
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: bGrounded
    m_EventTreshold: 0
    m_ExitTime: .684210539
  - m_ConditionMode: 1
    m_ConditionEvent: bCrouch
    m_EventTreshold: 0
    m_ExitTime: .684210539
  - m_ConditionMode: 2
    m_ConditionEvent: bGoingLeft
    m_EventTreshold: 0
    m_ExitTime: .684210539
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110185296
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110289922}
  m_DstState: {fileID: 110278469}
  m_TransitionDuration: .272727191
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: bGrounded
    m_EventTreshold: 0
    m_ExitTime: .727272809
  - m_ConditionMode: 2
    m_ConditionEvent: bMoved
    m_EventTreshold: 0
    m_ExitTime: .727272809
  - m_ConditionMode: 1
    m_ConditionEvent: bGoingLeft
    m_EventTreshold: 0
    m_ExitTime: .727272809
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110186437
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110263938}
  m_DstState: {fileID: 110289922}
  m_TransitionDuration: .25
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: bGrounded
    m_EventTreshold: 0
    m_ExitTime: .75
  - m_ConditionMode: 1
    m_ConditionEvent: bMoved
    m_EventTreshold: 0
    m_ExitTime: .75
  - m_ConditionMode: 2
    m_ConditionEvent: bCrouch
    m_EventTreshold: 0
    m_ExitTime: .75
  - m_ConditionMode: 2
    m_ConditionEvent: bGoingLeft
    m_EventTreshold: 0
    m_ExitTime: .75
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110189509
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110278469}
  m_DstState: {fileID: 110253879}
  m_TransitionDuration: .260869563
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: bGrounded
    m_EventTreshold: 0
    m_ExitTime: .739130437
  - m_ConditionMode: 1
    m_ConditionEvent: bCrouch
    m_EventTreshold: 0
    m_ExitTime: .739130437
  - m_ConditionMode: 2
    m_ConditionEvent: bGoingLeft
    m_EventTreshold: 0
    m_ExitTime: .739130437
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110191530
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110278469}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .260869563
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: bGrounded
    m_EventTreshold: 0
    m_ExitTime: .739130437
  - m_ConditionMode: 2
    m_ConditionEvent: bGoingLeft
    m_EventTreshold: 0
    m_ExitTime: .739130437
  - m_ConditionMode: 2
    m_ConditionEvent: bMoved
    m_EventTreshold: 0
    m_ExitTime: .739130437
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110199274
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110251078}
  m_DstState: {fileID: 110278469}
  m_TransitionDuration: .272727191
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: bGrounded
    m_EventTreshold: 0
    m_ExitTime: .727272809
  - m_ConditionMode: 2
    m_ConditionEvent: bMoved
    m_EventTreshold: 0
    m_ExitTime: .727272809
  - m_ConditionMode: 1
    m_ConditionEvent: bGoingLeft
    m_EventTreshold: 0
    m_ExitTime: .727272809
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
--- !u!1102 &110200000
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: idleRight
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: d2328ceae568e124da0b7126562ff567, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 36, y: 96, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110251078
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: runLeft
  m_Speed: 1
  m_CycleOffset: .5
  m_Motions:
  - {fileID: 7400012, guid: d2328ceae568e124da0b7126562ff567, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -252, y: 156, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 1
  m_Tag: 
--- !u!1102 &110253879
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: crouchRight
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400002, guid: d2328ceae568e124da0b7126562ff567, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 396, y: 276, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110263938
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: crouchIdle
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400004, guid: d2328ceae568e124da0b7126562ff567, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 228, y: 396, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110278469
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: idle_Left
  m_Speed: 1
  m_CycleOffset: .5
  m_Motions:
  - {fileID: 7400000, guid: d2328ceae568e124da0b7126562ff567, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 36, y: 216, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 1
  m_Tag: 
--- !u!1102 &110282691
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: crouch
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400002, guid: d2328ceae568e124da0b7126562ff567, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -228, y: 276, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110289922
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: runRight
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400012, guid: d2328ceae568e124da0b7126562ff567, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 348, y: 156, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1107 &110700000
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Base Layer
  m_DefaultState: {fileID: 110200000}
  m_States:
  - {fileID: 110200000}
  - {fileID: 110278469}
  - {fileID: 110289922}
  - {fileID: 110251078}
  - {fileID: 110253879}
  - {fileID: 110263938}
  - {fileID: 110282691}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 110200000}
      second:
      - {fileID: 110100000}
      - {fileID: 110119417}
      - {fileID: 110117870}
      - {fileID: 110147357}
    data:
      first: {fileID: 110278469}
      second:
      - {fileID: 110191530}
      - {fileID: 110171063}
      - {fileID: 110180384}
      - {fileID: 110189509}
    data:
      first: {fileID: 110289922}
      second:
      - {fileID: 110185296}
      - {fileID: 110139471}
      - {fileID: 110106731}
      - {fileID: 110103773}
    data:
      first: {fileID: 110251078}
      second:
      - {fileID: 110150328}
      - {fileID: 110155087}
      - {fileID: 110199274}
    data:
      first: {fileID: 110253879}
      second:
      - {fileID: 110169712}
      - {fileID: 110161732}
      - {fileID: 110184051}
      - {fileID: 110150695}
    data:
      first: {fileID: 110263938}
      second:
      - {fileID: 110105515}
      - {fileID: 110175465}
      - {fileID: 110186437}
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: 50, y: 20, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
